--- a/mainwindow.ui
+++ b/mainwindow.ui
@@ -14,18 +14,48 @@
    <string>MainWindow</string>
   </property>
   <widget class="QWidget" name="centralWidget">
-   <widget class="QPushButton" name="pushButton">
+   <widget class="QWidget" name="formLayoutWidget">
     <property name="geometry">
      <rect>
-      <x>160</x>
-      <y>170</y>
-      <width>88</width>
-      <height>36</height>
+      <x>20</x>
+      <y>70</y>
+      <width>281</width>
+      <height>139</height>
      </rect>
     </property>
-    <property name="text">
-     <string>PushButton</string>
-    </property>
+    <layout class="QFormLayout" name="formLayout">
+     <item row="1" column="1">
+      <widget class="QLineEdit" name="tb_Email"/>
+     </item>
+     <item row="2" column="1">
+      <widget class="QLineEdit" name="tb_Password">
+       <property name="echoMode">
+        <enum>QLineEdit::Password</enum>
+       </property>
+      </widget>
+     </item>
+     <item row="2" column="0">
+      <widget class="QLabel" name="label">
+       <property name="text">
+        <string>密码</string>
+       </property>
+      </widget>
+     </item>
+     <item row="3" column="1">
+      <widget class="QPushButton" name="pushButton">
+       <property name="text">
+        <string>PushButton</string>
+       </property>
+      </widget>
+     </item>
+     <item row="1" column="0">
+      <widget class="QLabel" name="label_2">
+       <property name="text">
+        <string>邮箱</string>
+       </property>
+      </widget>
+     </item>
+    </layout>
    </widget>
   </widget>
  </widget>
@@ -39,7 +69,7 @@
    <slot>Test()</slot>
    <hints>
     <hint type="sourcelabel">
-     <x>203</x>
+     <x>115</x>
      <y>187</y>
     </hint>
     <hint type="destinationlabel">
